--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   }
 }
